code25_all/scala/13311654.txt
asMA
asIdentity
Some(0).max(None)

<console>:14: error: type mismatch;
 found   : None.type (with underlying type object None)
 required: Ordering[?]
              Some(0).max(None)
                          ^

(Some(0):Identity[Option[Int]]).max(None)

asIdentity
Some(0).asIdentity.max(None)

